cedarschema/test/corpus/prism/tags_3.txt
================================================================================
tags_3
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/tags.cedarschema#L7-L11

action "writeDoc" appliesTo {
  principal: [User],
  resource: [Document],
  context: {}
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (action_declaration
    (action_name_list
      (string
        (string_content)))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier))))
      (context_type
        (type_reference
          (record_type))))))
