cedarschema/test/corpus/regressions/annotation_unclosed.txt
================================================================================
annotation_unclosed
================================================================================

@doc("x"

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (entity_declaration
    (annotation
      (identifier)
      (string
        (string_content)))
    (identifier_list
      (identifier))))
