cedarschema/test/corpus/regressions/incomplete_action_parents.txt
================================================================================
incomplete_action_parents
================================================================================

action b in

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (action_declaration
    (action_name_list
      (identifier))
    (action_parents))
  (entity_declaration
    (identifier_list
      (identifier))))
