cedarschema/test/corpus/regressions/incomplete_namespace_name.txt
================================================================================
incomplete_namespace_name
================================================================================

namespace N

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (ERROR
    (name
      (identifier)))
  (entity_declaration
    (identifier_list
      (identifier))))
