cedarschema/test/corpus/regressions/incomplete_parents.txt
================================================================================
incomplete_parents
================================================================================

entity A in

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents))
  (entity_declaration
    (identifier_list
      (identifier))))
