cedarschema/test/corpus/regressions/incomplete_type.txt
================================================================================
incomplete_type
================================================================================

entity A =

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (entity_declaration
    (identifier_list
      (identifier)))
  (entity_declaration
    (identifier_list
      (identifier))))
