cedarschema/test/corpus/regressions/keyword_action_names.txt
================================================================================
keyword_action_names
================================================================================

action action, view;

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (action_declaration
    (action_name_list
      (identifier)
      (identifier)))
  (entity_declaration
    (identifier_list
      (identifier))))
