cedarschema/test/corpus/regressions/keyword_action_parents.txt
================================================================================
keyword_action_parents
================================================================================

action a in action;

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (action_declaration
    (action_name_list
      (identifier))
    (action_parents))
  (action_declaration)
  (entity_declaration
    (identifier_list
      (identifier))))
