cedarschema/test/corpus/regressions/keyword_annotation.txt
================================================================================
keyword_annotation
================================================================================

@entity("x")
entity Annotated;

--------------------------------------------------------------------------------

(schema
  (entity_declaration
    (annotation
      (identifier)
      (string
        (string_content)))
    (identifier_list
      (identifier))))
