cedarschema/test/corpus/regressions/keyword_entity_name.txt
================================================================================
keyword_entity_name
================================================================================

entity action;

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (entity_declaration
    (identifier_list
      (identifier)))
  (entity_declaration
    (identifier_list
      (identifier))))
