cedarschema/test/corpus/regressions/keyword_namespace_name.txt
================================================================================
keyword_namespace_name
================================================================================

namespace entity {}

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (namespace
    (name
      (identifier)))
  (entity_declaration
    (identifier_list
      (identifier))))
