cedarschema/test/corpus/regressions/records.txt
================================================================================
records
================================================================================

entity A = { name: String,

entity Recovered;

--------------------------------------------------------------------------------

(schema
  (entity_declaration
    (identifier_list
      (identifier))
    (type_reference
      (record_type
        (attribute_declaration
          (identifier)
          (type_reference
            (name
              (identifier)))))))
  (entity_declaration
    (identifier_list
      (identifier))))
