cedarschema/test/corpus/regressions/types.txt
================================================================================
types
================================================================================

type Matrix = Grid<Row<Long>, String>;
type Base = { name: String };
entity User in [Group] = Base tags Set;
entity Group;

--------------------------------------------------------------------------------

(schema
  (common_type_declaration
    (identifier)
    (type_reference
      (name
        (identifier))
      (type_reference
        (name
          (identifier))
        (type_reference
          (name
            (identifier))))
      (type_reference
        (name
          (identifier)))))
  (common_type_declaration
    (identifier)
    (type_reference
      (record_type
        (attribute_declaration
          (identifier)
          (type_reference
            (name
              (identifier)))))))
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))))
    (type_reference
      (name
        (identifier)))
    (entity_tags
      (type_reference
        (name
          (identifier)))))
  (entity_declaration
    (identifier_list
      (identifier))))
