cedarschema/test/corpus/rfc/generalized_templates_1.txt
================================================================================
generalized_templates_1
================================================================================

// https://github.com/cedar-policy/rfcs/blob/a58f491fdb5a6681860c1c8f0cfc2501cce0bd50/text/0098-generalized-templates.md?plain=1#L39-L48

entity Document = {
    owner: Person
};
entity Person;

action Access appliesTo {
    principal: FS::Person,
    resource: [FS::Document],
    context: { date: datetime }
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))
    (record_type
      (attribute_declaration
        (identifier)
        (name
          (identifier)))))
  (entity_declaration
    (identifier_list
      (identifier)))
  (action_declaration
    (action_name_list
      (identifier))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier)
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier)
            (identifier))))
      (context_type
        (record_type
          (attribute_declaration
            (identifier)
            (name
              (identifier))))))))
