cedarschema/test/corpus/rfc/generalized_templates_2.txt
================================================================================
generalized_templates_2
================================================================================

// https://github.com/cedar-policy/rfcs/blob/a58f491fdb5a6681860c1c8f0cfc2501cce0bd50/text/0098-generalized-templates.md?plain=1#L74-L85

namespace FS {
    entity Folder;
    entity Document in Folder;
    entity Person = {
        owned_folders: Set<Folder>
    };
}

action AccessDocument appliesTo {
    principal: FS::Person,
    resource: FS::Document,
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (namespace
    (name
      (identifier))
    (entity_declaration
      (identifier_list
        (identifier)))
    (entity_declaration
      (identifier_list
        (identifier))
      (entity_parents
        (type_list
          (name
            (identifier)))))
    (entity_declaration
      (identifier_list
        (identifier))
      (record_type
        (attribute_declaration
          (identifier)
          (set_type
            (name
              (identifier)))))))
  (action_declaration
    (action_name_list
      (identifier))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier)
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier)
            (identifier)))))))
