cedarschema/test/corpus/rfc/nested_namespaces_1.txt
================================================================================
nested_namespaces_1
================================================================================

// https://github.com/cedar-policy/rfcs/blob/8d341e0b0e7925809d45ef3baf0323503aca5c2f/text/0101-nested-namespaces.md?plain=1#L183-L193

namespace Bar {
  entity Thing; // (1)
}

namespace Foo::Bar {
  entity Thing; // (2)
}

namespace Foo {
  type MyThing = Bar::Thing;
}

--------------------------------------------------------------------------------

(schema
  (comment)
  (namespace
    (name
      (identifier))
    (entity_declaration
      (identifier_list
        (identifier)))
    (comment))
  (namespace
    (name
      (identifier)
      (identifier))
    (entity_declaration
      (identifier_list
        (identifier)))
    (comment))
  (namespace
    (name
      (identifier))
    (common_type_declaration
      (identifier)
      (type_reference
        (name
          (identifier)
          (identifier))))))
